button profile dan perubahan pada app profile

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -46,8 +46,6 @@
   <body class="bg-gradient-to-b from-white via-emerald-50 to-pink-50 min-h-screen">
 
     <div class="min-h-screen flex">
-      <!-- Sidebar -->
-      
     </head>
     <body class="bg-gradient-to-b from-white via-emerald-50 to-pink-50 min-h-screen">
       <div class="min-h-screen flex">
@@ -83,7 +81,7 @@
             <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100"
                href="#">🔖 Bookmark</a>
             <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100"
-               href="#">👤 Profile</a>
+               href="{% url 'profil:show_views' %}">👤 Profile</a>
             <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100"
                href="#">✉️ Message</a>
             <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100"
